--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
     <body>
         <header>
         <nav>
-
+            <ul>
+                <li>Clientes</li>
+                <li>Productos</li>
+                <li>Proveedores</li>
+            </ul>
         </nav>
         </header>
         <main>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum doloremque perferendis dignissimos corporis voluptatem numquam architecto nam vitae provident, delectus alias placeat. Ducimus repudiandae quisquam deserunt saepe id harum libero.</p>
         </main>
         <footer>
-
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio modi ipsum iusto magnam vitae necessitatibus velit. Quibusdam veniam voluptate eius necessitatibus, sapiente delectus, repellendus, quod itaque totam ex in voluptatum.</p>
         </footer>
 
     
