--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </header>
         <main>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum doloremque perferendis dignissimos corporis voluptatem numquam architecto nam vitae provident, delectus alias placeat. Ducimus repudiandae quisquam deserunt saepe id harum libero.</p>
+            <p>Rama2</p>
         </main>
         <footer>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio modi ipsum iusto magnam vitae necessitatibus velit. Quibusdam veniam voluptate eius necessitatibus, sapiente delectus, repellendus, quod itaque totam ex in voluptatum.</p>
